# bot_tg_task_tracker

./: FEATURES.md  README.md  manage.py  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  urls.py  views.py
telegram_bot/: apps.py  tasks.py
tests/: test_habits.py  test_users.py
users/: models.py  serializers.py  urls.py  views.py
